# move-alarm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
Plan/: PlanV2.excalidraw  PlanV3.excalidraw
Plan/BDD/: Alarm.md  App.md  BDD-Guidance.md  Configuration.md  HandleAuthorisation.md  Sounds.md
__tests__/: mock_sounds_data.json  test_alarm.py  test_app.py  test_config.py  test_oauth.py  test_sounds.py  test_utils.py
move_alarm/: app.py
move_alarm/components/: alarm.py  sounds.py
move_alarm/contexts/: __init__.py  use_context.py
move_alarm/datatypes/: __init__.py  config.py  oauth.py  sounds.py
move_alarm/types/: __init__.py  config.py  contexts.py  sounds.py
move_alarm/utils/: __init__.py  api_calls.py  config.py  helpers.py  oauth.py
src/: app.py
src/utils/: utils.py
