[project]
name = "src"
version = "0.1.0"
description = "An alarm designed to remind you to be more active!"
authors = [
    {name = "DevDolphin7",email = "devdolphin7@outlook.com"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argcomplete (==3.5.3)",
    "click (==8.1.8)",
    "iniconfig (==2.0.0)",
    "packaging (==24.2)",
    "pipx (==1.7.1)",
    "platformdirs (==4.3.6)",
    "pluggy (==1.5.0)",
    "pytest (==8.3.4)",
    "userpath (==1.9.2)",
    "mypy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
